[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/ui/menu/campaign_mission_selection.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/courier.tres" type="FontFile" id=2]
[ext_resource path="res://assets/gui/campaign/dyke_continent.png" type="Texture2D" id=3]
[ext_resource path="res://scenes/ui/icons/arrow_left.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/icons/arrow_right.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/courier_big.tres" type="FontFile" id=6]
[ext_resource path="res://scenes/ui/icons/medal.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/gui/icons/medal_whiteout.png" type="Texture2D" id=8]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("widgets/medal:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("widgets/medal:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("widgets/medal_whiteout:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("widgets/medal_whiteout:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "medal"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("widgets/medal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5, 3 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("widgets/medal_whiteout:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.5, 3 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("widgets/medal_whiteout:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.5, 3 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="campaign_mission_selection" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
offset_left = -600.0
offset_top = -350.0
offset_right = 600.0
offset_bottom = 350.0
color = Color( 0.196078, 0.196078, 0.196078, 0.823529 )
__meta__ = {
"_editor_description_": ""
}

[node name="widgets" type="Control" parent="."]
offset_left = -600.0
offset_top = -350.0
offset_right = 600.0
offset_bottom = 350.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="map" type="Sprite2D" parent="widgets"]
position = Vector2( 600, 350 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="missions_anchor" type="Control" parent="widgets"]
offset_left = 120.0
offset_top = 107.0
offset_right = 1080.0
offset_bottom = 593.0
clip_contents = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="widgets"]
offset_left = 450.0
offset_top = 650.0
offset_right = 550.0
offset_bottom = 680.0
theme_override_fonts/font = ExtResource( 2 )
text = "TR_BACK"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="select_button" type="Button" parent="widgets"]
offset_left = 650.0
offset_top = 650.0
offset_right = 750.0
offset_bottom = 680.0
theme_override_fonts/font = ExtResource( 2 )
text = "TR_SELECT"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="prev_button" type="Button" parent="widgets"]
offset_left = 40.0
offset_top = 107.0
offset_right = 120.0
offset_bottom = 593.0
focus_neighbor_right = NodePath("../next_button")
theme_override_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="anchor" type="Control" parent="widgets/prev_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow_left" parent="widgets/prev_button/anchor" instance=ExtResource( 4 )]

[node name="next_button" type="Button" parent="widgets"]
offset_left = 1080.0
offset_top = 107.0
offset_right = 1160.0
offset_bottom = 593.0
focus_neighbor_left = NodePath("../prev_button")
theme_override_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="anchor" type="Control" parent="widgets/next_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="arrow_right" parent="widgets/next_button/anchor" instance=ExtResource( 5 )]

[node name="title" type="Label" parent="widgets"]
offset_left = 40.0
offset_top = 40.0
offset_right = 1160.0
offset_bottom = 105.0
theme_override_fonts/font = ExtResource( 6 )
text = "Campaign Title"
align = 1
valign = 1

[node name="medal" parent="widgets" instance=ExtResource( 7 )]
visible = false
position = Vector2( 40, 60 )
scale = Vector2( 2, 2 )
offset = Vector2( 60, 53 )

[node name="medal_whiteout" parent="widgets" instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 40, 60 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
offset = Vector2( 60, 53 )

[node name="animations" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/RESET = SubResource( 3 )
anims/hide = SubResource( 1 )
anims/medal = SubResource( 4 )
anims/show = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="widgets/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="widgets/select_button" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="widgets/prev_button" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="widgets/next_button" to="." method="_on_next_button_pressed"]
